--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
        "group",
        "manager"
     ],   
- "repository": "https://github.com/XFLSWAN/SHIVANSH-ROBOT",
+ "repository": "https://github.com/MAHTO-ANJALI/PRISHUGROUPMANGERBOT",
  "stack": "heroku-22",
  "addons": [
     {
@@ -22,12 +22,12 @@
     "API_ID": {
        "description": "Get this value from my.telegram.org/apps.",
        "required": true,
-       "value": "29308061"
+       "value": "24295926"
     },
     "API_HASH": {
        "description": "Get this value from my.telegram.org/apps.",
        "required": true,
-       "value": "462de3dfc98fd938ef9c6ee31a72d099"
+       "value": "bb6493ae35ec2bcea928c0a38584ca2e"
     },
     "ALLOW_EXCL": {
        "description": "Set this to True if you want ! to be a command prefix along with /. Recommended is True",
@@ -45,12 +45,12 @@
     "EVENT_LOGS": {
        "description": "Event logs channel to note down important bot level events, recommend to make this public. ex: '-123456'",
        "required": true,
-       "value": "-1002018556839"
+       "value": "-1002077359484"
     },
     "MONGO_DB_URI": {
        "description": "Required for database connections.",
        "required": true,
-       "value": "mongodb+srv://Krishna:pss968048@cluster0.4rfuzro.mongodb.net/?retryWrites=true&w=majority"
+       "value": "mongodb+srv://AnjaliWorld098:anjaliworld098@cluster0.2xwkwyi.mongodb.net/?retryWrites=true&w=majority"
     },
     "CASH_API_KEY": {
         " description": " Get your API key from https://www.alphavantage.co/support/#api-key",
@@ -66,7 +66,7 @@
     "OWNER_ID": {
        "description": "Your user ID as an integer.",
        "required": true,
-       "value": "6919199044"
+       "value": "7185571116"
     },
     "START_IMG": {
        "description": "Telegraph link of the image which will be shown at start command.",
@@ -76,7 +76,7 @@
     "SUPPORT_CHAT": {
        "description": "Your Telegram support group chat username where your users will go and bother you with shit Example - The_support_chat.",
        "required": true,
-       "value": "mastiwithfriendsx"
+       "value": "DANGEROUS_FIGHTER_GROUP"
     },
     "TOKEN": {
        "description": "Get bot token from @BotFather on TG",
